# My_widget

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_471ca4f6ea21b87b___init___py.html  z_471ca4f6ea21b87b_masks_py.html  z_471ca4f6ea21b87b_processing_py.html  z_471ca4f6ea21b87b_widget_py.html
src/: debug_check.py  decorators.py  external_api.py  generators.py  main.py  masks.py  readers.py  search.py  utils.py  widget.py
src/my_widget/: masks.py  processing.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_readers.py  test_search.py  test_utils.py  test_widget.py
